--- a/lib/IDLParser/CMakeLists.txt
+++ b/lib/IDLParser/CMakeLists.txt
@@ -17,7 +17,7 @@ ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/GeneratedParser.hs
 
 ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/IDLParser
                    COMMAND ghc ${CMAKE_CURRENT_SOURCE_DIR}/stage2.hs -hidir ${CMAKE_CURRENT_BINARY_DIR} -odir ${CMAKE_CURRENT_BINARY_DIR} -i${CMAKE_CURRENT_BINARY_DIR} -i${CMAKE_CURRENT_SOURCE_DIR} -o ${CMAKE_CURRENT_BINARY_DIR}/IDLParser
-                   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/stage2.hs ${CMAKE_CURRENT_BINARY_DIR}/GeneratedParser.hs
+                   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/stage2.hs ${CMAKE_CURRENT_SOURCE_DIR}/IDLProcessing.hs ${CMAKE_CURRENT_BINARY_DIR}/GeneratedParser.hs
                    COMMENT "Generate IDL program parser")
 
 ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/IdiomSpecifications.cpp
