--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -867,6 +867,7 @@ add_subdirectory(utils/TableGen)
 add_subdirectory(include/llvm)
 
 add_subdirectory(lib)
+add_subdirectory(lilac)
 
 if( LLVM_INCLUDE_UTILS )
   add_subdirectory(utils/FileCheck)
