refactoring some cmake stuff

--- a/lib/IDLParser/CMakeLists.txt
+++ b/lib/IDLParser/CMakeLists.txt
@@ -1,17 +1,24 @@
 add_llvm_library(LLVMIDLParser
   ${CMAKE_CURRENT_BINARY_DIR}/IdiomSpecifications.cpp
-
-  DEPENDS
-  idl_parser
-  intrinsics_gen
+  DEPENDS intrinsics_gen
+          idl_parser
 )
 
 set(CMAKE_CXX_STANDARD 17)
+
 add_executable(idl_parser
-    Parser.cc
+  Parser.cc
 )
 
-ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/IdiomSpecifications.cpp
-                   COMMAND idl_parser ${CMAKE_CURRENT_SOURCE_DIR}/IDL.bnf ${CMAKE_CURRENT_SOURCE_DIR}/Idioms.idl | pypy ${CMAKE_CURRENT_SOURCE_DIR}/stage3.py > ${CMAKE_CURRENT_BINARY_DIR}/IdiomSpecifications.cpp
-                   DEPENDS idl_parser  ${CMAKE_CURRENT_SOURCE_DIR}/IDL.bnf ${CMAKE_CURRENT_SOURCE_DIR}/Idioms.idl ${CMAKE_CURRENT_SOURCE_DIR}/stage3.py
-                   COMMENT "Generate idiom specifications C++ file")
+add_custom_command(
+  OUTPUT  ${CMAKE_CURRENT_BINARY_DIR}/IdiomSpecifications.cpp
+  COMMAND idl_parser ${CMAKE_CURRENT_SOURCE_DIR}/IDL.bnf
+                     ${CMAKE_CURRENT_SOURCE_DIR}/Idioms.idl
+              | pypy ${CMAKE_CURRENT_SOURCE_DIR}/stage3.py
+                   > ${CMAKE_CURRENT_BINARY_DIR}/IdiomSpecifications.cpp
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/IDL.bnf
+          ${CMAKE_CURRENT_SOURCE_DIR}/Idioms.idl
+          ${CMAKE_CURRENT_SOURCE_DIR}/stage3.py
+          idl_parser
+  COMMENT "Generate idiom specifications C++ file"
+)
