--- a/lib/IDLPasses/CMakeLists.txt
+++ b/lib/IDLPasses/CMakeLists.txt
@@ -1,9 +1,6 @@
 add_llvm_library(LLVMIDLPasses
-
   CustomPassFlangfix.cpp
   CustomPassPreprocess.cpp
   CustomPassReplace.cpp
-
-  DEPENDS
-  intrinsics_gen
+  DEPENDS intrinsics_gen
 )
